# trading-bot-2

./: .env.example  .gitignore  Dockerfile.api  README.md  bot8.sh  pyproject.toml  railway.toml
.claude/: settings.local.json
api/: __init__.py  auth.py  bootstrap.py  db.py  main.py
api/routers/: __init__.py  _helpers.py  backtest.py  news.py  portfolio.py  trades.py
bot8/: __init__.py  cli.py
bot8/config/: __init__.py  logging.py  settings.py
bot8/dashboard/: __init__.py
bot8/data/: __init__.py  db.py  schema.sql
bot8/data/market/: __init__.py  bars.py  macro.py  universe.py
bot8/data/news/: __init__.py  fnspid_loader.py  live.py
bot8/eval/: __init__.py
bot8/execution/: __init__.py  alpaca.py
bot8/features/: __init__.py
bot8/features/news/: __init__.py  aggregator.py  catalyst_regex.py  claude_scorer.py  finbert_scorer.py  scorer.py
bot8/features/news/prompts/: __init__.py  rubric_v1.py
bot8/features/quant/: __init__.py  cross.py  labels.py  macro.py  pipeline.py  stock.py  technicals.py
bot8/models/: __init__.py
bot8/models/meta/: __init__.py
bot8/models/quant/: __init__.py  cv.py  ensemble.py  metrics.py  train.py  training_data.py
bot8/portfolio/: __init__.py  longshort.py  risk.py
bot8/runner/: __init__.py  backtest.py  premarket.py
bot8/telemetry/: __init__.py
docs/: DEPLOY.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  railway.toml
frontend/app/: layout.tsx  page.tsx
frontend/app/backtest/: page.tsx
frontend/app/news/: page.tsx
frontend/app/trades/: page.tsx
frontend/components/: BacktestCompare.tsx  EquityChart.client.tsx  EquityChart.tsx  MetricsBar.tsx  NavHeader.tsx  PositionsTable.tsx
frontend/lib/: api.ts  format.ts
scripts/: export_dashboard_db.py
tests/: test_backtest.py  test_catalyst_regex.py  test_cv.py  test_execution.py  test_features_pipeline.py  test_fnspid_loader.py  test_macro.py  test_news_aggregator.py  test_smoke.py  test_technicals.py  test_universe.py
