[project]
name = "bot8"
version = "0.1.0"
description = "Hybrid quant + news trading bot (long/short, daily-rebalance, Alpaca paper)"
readme = "README.md"
requires-python = ">=3.11"

# Core dependencies — enough to run data ingestion, config, CLI, smoke tests.
# Heavier stacks (ML, NLP, trading) live in extras so you can install them
# phase-by-phase: `pip install -e .[ml,nlp,trading,dashboard,dev]`.
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "loguru>=0.7",
    "python-dotenv>=1.0",
    "duckdb>=1.0",
    "pandas>=2.2",
    "numpy>=1.26,<2.0",
    "pyarrow>=16.0",
    "huggingface_hub>=0.24",
    "requests>=2.32",
]

[project.optional-dependencies]
# HuggingFace datasets library (streaming FNSPID)
hf = [
    "datasets>=2.20",
]

# ML stack for quant ensemble + meta-learner
ml = [
    "scikit-learn>=1.5",
    "lightgbm>=4.3",
    "xgboost>=2.1",
    "catboost>=1.2",
    "scipy>=1.13",
]

# NLP stack for FinBERT sentiment scoring
nlp = [
    "transformers>=4.42",
    "torch>=2.3",
    "tokenizers>=0.19",
]

# Alpaca + Yahoo + EDGAR fetchers
trading = [
    "alpaca-py>=0.30",
    "yfinance>=0.2.40",
    "lxml>=5.2",
]

# Flask dashboard + scheduled jobs
dashboard = [
    "flask>=3.0",
    "apscheduler>=3.10",
]

# Claude API (batch scoring for news enrichment pilot)
llm = [
    "anthropic>=0.70",
]

# FastAPI backend for the web dashboard
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
    "pydantic>=2.7",
]

dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "ipython>=8.25",
]

# Everything
all = [
    "bot8[hf,ml,nlp,trading,dashboard,llm,web,dev]",
]

[project.scripts]
bot8 = "bot8.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bot8"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
